security problems in code removed